--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.10.0",
+    "nodemon": "^2.0.15",
+    "quill": "^1.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
